--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
   "dependencies": {
     "@nestjs/common": "^8.3.1",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.3.1",
     "@nestjs/platform-socket.io": "^8.3.1",
     "@nestjs/websockets": "^8.3.1",
     "@prisma/client": "3.10.0",
     "bson": "^4.6.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "fastify-helmet": "^7.0.1",
     "nestjs-prisma": "^0.15.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
